# roboptim-core-plugin-cminpack

./: .travis.build.sh  .travis.yml  CMakeLists.txt  README.md
doxygen/HEAD/: a00001.html  a00002.html  a00002.js  a00003.html  a00004.html  a00004.js  a00005.html  a00005.js  a00007.html  annotated.html  annotated.js  classes.html  dir_24f1a263746bcfa7b2f0931a14bea33b.html  dir_94dc5dd8ea5fdfb78b18d3a3efd55b41.html  dir_a73245a6721439fa402dabb56c259f58.html  dir_b3352f2f79e6f4435906fffc2849cd1b.html  dir_f2f70068dab326d168716b16fa275d6d.html  files.html  files.js  functions.html  functions_func.html  functions_type.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  namespaces.html  namespaces.js  navtree.js  navtreeindex.js  navtreeindex0.js
doxygen/HEAD/search/: all_2.js  all_3.js  all_5.js  all_6e.js  all_7.js  all_70.js  all_7e.js  all_c.js  classes_73.js  files_0.js  functions_1.js  functions_3.js  functions_63.js  functions_6a.js  functions_72.js  functions_9.js  namespaces_0.js  search.js  typedefs_66.js  typedefs_70.js  typedefs_73.js
doxygen/v3.0/: a00001.html  a00003.html  a00004.html  a00007.html  annotated.html  files.html  functions.html  functions_func.html  globals.html  globals_type.html  index.html  namespaces.js
doxygen/v3.0/search/: all_63.js  all_73.js  functions_70.js
doxygen/v3.1/: a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00004.html  a00005.html  a00007.html  annotated.html  classes.html  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_func.html  globals_type.html  index.html  namespaces.html
doxygen/v3.1/search/: all_66.js  all_67.js  all_70.js  all_72.js  typedefs_63.js
doxygen/v3.2/: a00001.html  a00001.js  a00002.html  a00003.html  a00004.html  a00005.html  a00007.html  annotated.html  classes.html  files.html  files.js  functions.html  functions_func.html  functions_type.html  globals.html  globals_func.html  globals_type.html  index.html  namespaces.html  navtree.js
doxygen/v3.2/search/: functions_62.js  functions_64.js  functions_67.js  typedefs_61.js  typedefs_67.js  typedefs_72.js
include/roboptim/core/plugin/: cminpack.hh  sum-of-c1-squares.hh
src/: CMakeLists.txt  cminpack.cc  sum-of-c1-squares.cc
tests/: CMakeLists.txt  plugin.cc  simple.cc  simple.stdout
